# copyMarioProject

./: .gitignore  CMakeLists.txt  Tile.tiled-session  untitled.tiled-session
include/: 1UpMushroom.h  3UpMoon.h  Block.h  BlockFactory.h  Button.h  CloudBlock.h  Coin.h  CollisionInfo.h  CollisionMediator.h  CourseClearToken.h  Direction.h  DrawalbeObj.h  EnityState.h  Entity.h  ExclamationBlock.h  EyesClosedBlock.h  EyesOpenedBlock.h  FireFlower.h  Fireball.h  FloatingScore.h  FlyingGoomba.h  GameClock.h  GameState.h  GlassBlock.h  Goomba.h  HUD.h  Hitbox.h  Item.h  ItemFactory.h  ItemState.h  KoopaTroopa.h  Level.h  LevelState.h  Map.h  Mario.h  MarioState.h  MenuState.h  Monster.h  MonsterFactory.h  Mushroom.h  (+16 more)
resources/Entity/: Items.tsx  Tileset.tsx
resources/Map/: Blocks.tsx  Coin.tsx  Enemies.tsx  Map2.json  Map3.json  map0.json  map0.txt  map1.json
src/: 1UpMushroom.cpp  3UpMoon.cpp  Block.cpp  BlockFactory.cpp  Button.cpp  CloudBlock.cpp  Coin.cpp  CollisionMediator.cpp  CourseClearToken.cpp  Entity.cpp  ExclamationBlock.cpp  EyesClosedBlock.cpp  EyesOpenedBlock.cpp  FireFlower.cpp  Fireball.cpp  FloatingScore.cpp  FlyingGoomba.cpp  GameClock.cpp  GameState.cpp  GlassBlock.cpp  Goomba.cpp  HUD.cpp  Hitbox.cpp  Item.cpp  ItemFactory.cpp  KoopaTroopa.cpp  Level.cpp  Map.cpp  Mario.cpp  MenuState.cpp  Monster.cpp  MonsterFactory.cpp  Mushroom.cpp  PiranhaPlant.cpp  PlayerData.cpp  QuestionBlock.cpp  ResourceManager.cpp  SoundControoler.cpp  Star.cpp  State.cpp  (+8 more)
